force-app/main/default/objects/Transaction_BigData_V3__b/Transaction_BigData_V3__b.object-meta.xml
<CustomObject>
    <label>Transaction_BigData_V3</label>
    <pluralLabel>Transaction_BigData_V3</pluralLabel>
</CustomObject>