force-app/main/default/objects/Transaction_BigData_V3__b/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transaction_BigData_V3</relationshipLabel>
    <relationshipName>Transaction_BigData_V3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>