force-app/main/default/objects/Transaction_BigData_V3__b/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transaction_BigData_V3</relationshipLabel>
    <relationshipName>Transaction_BigData_V3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>