force-app/main/default/objects/Transaction_BigData_V3__b/fields/Mode1__c.field-meta.xml
<CustomField>
    <fullName>Mode1__c</fullName>
    <label>Mode1</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>