force-app/main/default/objects/Transaction_BigData_V3__b/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>150</length>
    <type>Text</type>
</CustomField>