force-app/main/default/objects/Transaction_BigData_V3__b/fields/RefNumber__c.field-meta.xml
<CustomField>
    <fullName>RefNumber__c</fullName>
    <label>RefNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>