force-app/main/default/objects/Transaction_BigData_V3__b/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transaction_BigData_V3</relationshipLabel>
    <relationshipName>Transaction_BigData_V3</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>